--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ p {
 	line-height:150%;
 	font-family:"Times New Roman"
 }
+
+.ui-progressbar {
+    position: relative;
+}
+.progress-label {
+    position: relative;
+    left: 50%;
+    top: 4px;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #fff;
+}
