--- a/style.css
+++ b/style.css
@@ -6,13 +6,7 @@ p {
 	font-family:"Times New Roman"
 }
 
-.ui-progressbar {
-    position: relative;
-}
-.progress-label {
-    position: relative;
-    left: 50%;
-    top: 4px;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 #fff;
+/*needed to remove the second input box on focus for android*/
+input {
+-webkit-user-modify: read-write-plaintext-only;
 }
