--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@ p {
 input {
 -webkit-user-modify: read-write-plaintext-only;
 }
+
+.test {
+    background-image: url(images/APpBackgroundForest1.jpg);
+    background-repeat:no-repeat;
+	background-size:100% 100%;
+	height:100vh;
+	padding: 0px;
+	margin: 0 auto;
+}
