--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ input {
     background-image: url(images/APpBackgroundForest1.jpg);
     background-repeat:no-repeat;
 	background-size:100% 100%;
-	height:100vh;
+	height:100%;
 	padding: 0px;
 	margin: 0 auto;
 }
