--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ input {
 	height:100%;
 	padding: 0px;
 	margin: 0 auto;
+
 }
 
 html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+    background-color: #333333;
 }
