--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ input {
 }
 
 .test {
-    background-image: url(images/APpBackgroundForest1.jpg);
+    background-image: url(images/background_home.png);
     background-repeat:no-repeat;
 	background-size:100% 100%;
 	height:100%;
