--- a/style.css
+++ b/style.css
@@ -11,11 +11,17 @@ input {
 -webkit-user-modify: read-write-plaintext-only;
 }
 
-.test {
+/*specify a height for the header so we can line-up the elements, the default is 40px*/
+#home_footer {
+    height : 40px;
+    position : absolute;
+    bottom   : 0;
+}
+
+.background_home {
     background-image: url(images/background_home.png);
     background-repeat:no-repeat;
 	background-size:100% 100%;
-	height:100%;
 	padding: 0px;
 	margin: 0 auto;
 
