--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ p {
 	font-family:"Times New Roman"
 }
 
+li {
+	font-size:17px;
+	line-height:150%;
+	font-family:"Times New Roman"
+}
+
 /*needed to remove the second input box on focus for android*/
 input {
 -webkit-user-modify: read-write-plaintext-only;
