--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html, body {
 }
 
 .background_sky {
-    background-image: url(images/background_sky.png);
+    background-image: url(images/background_sky1.png);
     background-repeat:no-repeat;
 	background-size:100% 100%;
 	height:100%;
